<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Movie Browser</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_movie_details">MovieDetails</string>
    <string name="Release">Release:</string>
    <string name="rating">Rating:</string>
    <string name="dumb">453453545</string>
    <string name="budget">Budget:</string>
    <string name="popularity">Popularity:</string>
    <string name="runtime">Runtime:</string>
    <string name="search_hint">Enter movie name</string>
    <string name="app_label">Movie browser</string>
    <string name="title_activity_searchable">Search results</string>
    <string name="settings_storage">Cache location</string>
    <string name="settings_storage_sum">Select cache location</string>
    <string name="settings_language">Language</string>
    <string name="settings_language_sum">Select interface language</string>
    <string name="settings_memory">Memory</string>
    <string name="settings_card">File system</string>
    <string name="settings_en">English</string>
    <string name="settings_ua">Ukrainian</string>
    <string name="settings_count_sum">Select limit for movies to download</string>
    <string name="settings_count_dialog">Enter a number of movies (from 5 to 20):</string>
    <string name="settings_count">Movies to download</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings_cache">Use cache</string>
    <string name="settings_cache_sum">Downloading is faster when cache enabled</string>
    <string name="downloading">Downloading</string>
    <string name="trailer">Play trailer</string>
    <string name="title_activity_video">Video</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_details">DetailsActivity</string>

</resources>