<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <EditTextPreference
        android:defaultValue="10"
        android:dialogTitle="@string/settings_count_dialog"
        android:key="moviesCount"
        android:summary="@string/settings_count_sum"
        android:title="@string/settings_count" >
    </EditTextPreference>

    <ListPreference
        android:defaultValue="@string/settings_memory"
        android:dialogTitle="@string/settings_storage_sum"
        android:entries="@array/cache_location"
        android:entryValues="@array/cache_location"
        android:key="cache_location"
        android:summary="@string/settings_storage_sum"
        android:title="@string/settings_storage" >
    </ListPreference>
    <ListPreference
        android:defaultValue="@string/settings_en"
        android:dialogTitle="@string/settings_language_sum"
        android:entries="@array/language"
        android:entryValues="@array/language"
        android:key="language"
        android:summary="@string/settings_language_sum"
        android:title="@string/settings_language" >
    </ListPreference>
</PreferenceScreen>